add onkeyup search

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </header>
     <div class="repos-container">
       <div class="get-repos">
-        <input type="text" placeholder="Github Username">
-        <span class="get-button">Get Repos</span>
+        <input type="text" onkeyup="getRepos()" placeholder="Github Username">
+        <!-- <span class="get-button">Get Repos</span> -->
       </div>
       <div class="show-data">
+          <img src="" alt="">
         <span>No Data To Show</span>
       </div>
     </div>
