--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- <span class="get-button">Get Repos</span> -->
       </div>
       <div class="show-data">
-          <img src="" alt="">
+          <!-- <img  id="avatar" src="" alt=""> -->
         <span>No Data To Show</span>
       </div>
     </div>
