--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
   </head>
   <body>
 <header>
-    <nav><img src="github-logo-white.png" alt="github-logo-white"></nav>
+    <nav><img src="github-logo-white.png" alt="github-logo-white">
+      <h1>API GITHUB</h1>
+    </nav>
 </header>
     <div class="repos-container">
       <div class="get-repos">
-        <input type="text" onkeyup="getRepos()" placeholder="Github Username">
+        <input type="text" onkeyup="getRepos(), getAvatar()" placeholder="Github Username">
         <!-- <span class="get-button">Get Repos</span> -->
       </div>
+      <div  class="img" >dhfdjfghfhjjgjkgjg</div>
       <div class="show-data">
-          <!-- <img  id="avatar" src="" alt=""> -->
+         
         <span>No Data To Show</span>
       </div>
     </div>
